# qool

./: Cargo.toml  README.md  install.sh
src/: args.rs  macros.rs  main.rs  utils.rs
