[package]
name = "qool"
version = "0.1.0"
authors = ["madprops <easywest@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorskill = "1.1.3"
qrcode = "0.11.0"
image = "0.22.3"
clap = "2.33.0"
dirs = "2.0.2"